feat(downloader): 引入虚拟线程和并发限制器提升下载性能
- 使用虚拟线程替代固定线程池以提高并发性能- 添加信号量以控制最大并发数，避免资源耗尽
- 实现带限流的提交方法，确保任务执行受控-优化线程命名便于调试和监控
- 保持原子计数器跟踪已完成的瓦片数量